gcc/testsuite/g++.target/arm/pr81497.C
@@ -1,0 +1,9 @@
+/* { dg-do compile } */
+/* { dg-require-effective-target arm_thumb2_ok } */
+
+#include <arm_acle.h>
+
+int main ()
+{
+  return 0;
+}
